--- a/css/variables.less
+++ b/css/variables.less
@@ -26,7 +26,10 @@
 @font-size-h6:            ceil((@font-size-base * 0.85)); // ~12px
 
 @black: #000;
+@white: #fff;
 @blue: #00b7f1;
 @padding: 5px;
 @margin: 5px;
+@border: 1px solid #dfdfdf;
 
+@color-templete: #dfdfdf;
