--- a/css/style.less
+++ b/css/style.less
@@ -70,9 +70,9 @@
 							border: 1px solid #dfdfdf;
 							border-right: none;
 							border-top: none;
-							.list-group-item {
+							> .list-group-item {
 								list-style: none;
-								a {
+								> a {
 									padding: 0 @padding+5 0 @padding+40;
 									font-size: @font-size-small+1;
 									position: relative;
@@ -146,6 +146,58 @@
 										top: 0;
 										margin: auto;
 										height: 16px;
+									}
+									
+									
+								}
+								> .nav-sub {
+									width: 935px;
+									padding: 16px 20px;
+									height: 419px;
+									border-width: 1px 1px 1px 0;
+									border-style: solid;
+									border-color: #ddd #ddd #ddd #fff;
+									position: absolute;
+									top: 34px;
+									left: 100%;
+									background: #fff;
+									margin-left: 0;
+									box-shadow: 1px 0 1px 0 rgba(0,0,0,.1),1px 1px 1px 0 rgba(0,0,0,.09);
+									
+									> ul {
+										list-style: none;
+										margin: 0;
+										padding: 0;
+										li {
+											padding-right: 20px;
+											float: left;
+											width: 25%;
+											display: block;
+											padding-right: 5px;
+											overflow: hidden;
+											
+											.nav-sub-list-box {
+												margin-bottom: 10px;
+												
+												h2 {
+													font-size: 13px;
+													font-weight: 700;
+													margin: 0;
+													line-height: 23px;
+													text-transform: capitalize;
+													letter-spacing: -.22px;
+												}
+												a {
+													display: block;
+													color: #444;
+													line-height: 22px;
+													font-size: 13px;
+													margin-right: 30px;
+													text-decoration: none;
+												}
+
+											}
+										}
 									}
 								}
 							}
