--- a/css/style.less
+++ b/css/style.less
@@ -151,6 +151,11 @@
 									
 								}
 								> .nav-sub {
+									.nav-sub-list-box {
+										img {
+											margin-top: -13px;
+										}
+									}
 									width: 935px;
 									padding: 16px 20px;
 									height: 419px;
@@ -163,7 +168,7 @@
 									background: #fff;
 									margin-left: 0;
 									box-shadow: 1px 0 1px 0 rgba(0,0,0,.1),1px 1px 1px 0 rgba(0,0,0,.09);
-									
+									display: none;
 									> ul {
 										list-style: none;
 										margin: 0;
@@ -195,6 +200,15 @@
 													margin-right: 30px;
 													text-decoration: none;
 												}
+												.all {
+													font-weight: 700;
+													color: #00aaf1;
+													font-size: 13px;
+													padding: 0;
+													.fa {
+														margin-left: 7px;
+													}
+												}
 
 											}
 										}
@@ -216,6 +230,125 @@
 			margin-top: 28px;
 			float: right;
 			overflow: hidden;
+			position: relative;
+			
+			.swiper-container {
+				position: absolute;
+				top: 6px;
+				right: 6px;
+				width: 250px;
+				overflow: visible;
+				
+				.swiper-slide:first-child {
+					-webkit-border-radius: 3px 3px 0 0;
+					-moz-border-radius: 3px 3px 0 0;
+					border-radius: 3px 3px 0 0;
+					border-top: 1px solid #ccc;
+					
+				}
+				
+				.swiper-slide {
+					height: 48px;
+					float: none;
+					padding: 4px 10px 6px;
+					border-color: #ccc;
+					border-style: solid;
+					border-width: 0 1px 1px;
+					cursor: pointer;
+					text-shadow: 1px 1px 1px rgba(255,255,255,.5);
+					position: relative;
+					background-image: -webkit-linear-gradient(top,#f4f4f4 0,#eee 100%);
+					background-image: linear-gradient(to bottom,#f4f4f4 0,#eee 100%);
+					background-repeat: repeat-x;
+					filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff4f4f4', endColorstr='#ffeeeeee', GradientType=0);
+					-webkit-box-shadow: inset 0 1px 0 0 #fff;
+					box-shadow: inset 0 1px 0 0 #fff;
+					
+					> .image {
+						float: left;
+						width: 36px;
+						height: 36px;
+						border: 1px solid #fff;
+						margin: 0 8px 0 0;
+					}
+					
+					> a {
+						color: #666;
+						font-weight: 700;
+						display: block;
+						font-size: 11px;
+						width: 184px;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+						overflow: hidden;
+						text-decoration: none;
+					}
+					
+					> span {
+						font-size: 11px;
+						display: block;
+						margin-top: 5px;
+						color: #666;
+						width: 184px;
+						text-overflow: ellipsis;
+						white-space: nowrap;
+						overflow: hidden;
+					}
+					
+					.clearboth {
+						height: 0;
+						display: block;
+						border: none;
+						padding: 0;
+						margin: 0;
+					}
+					&:hover {
+						background: #fff;
+						&:before {
+							right: 100%;
+							top: 49%;
+							border: solid transparent;
+							content: " ";
+							height: 0;
+							width: 0;
+							position: absolute;
+							border-color: transparent #ccc transparent transparent;
+							border-width: 10px;
+							margin-top: -8px
+						}
+						&:after {
+							right: 100%;
+							top: 49%;
+							border: solid transparent;
+							content: " ";
+							height: 0;
+							width: 0;
+							position: absolute;
+							border-color: transparent #fff transparent transparent;
+							border-width: 9px;
+							margin-top: -7px;
+						}
+					}
+				}
+				
+			}
+			
+//			.swiper-container {
+//				margin: 0 auto;
+//				position: relative;
+//				overflow: hidden;
+//				z-index: 1;
+//			}
+			
+			.swiper-wrapper {
+				position: relative;
+				width: 100%!important;
+				display: block;
+				-webkit-transform: none!important;
+				-ms-transform: none!important;
+				-o-transform: none!important;
+				transform: none!important;
+			}
 		}
 	}
    .clearfix {
