--- a/css/style.less
+++ b/css/style.less
@@ -72,7 +72,16 @@
 							border-top: none;
 							> .list-group-item {
 								list-style: none;
+                                > .active {
+                                    background: #00aaf1;
+                                    color: @white;
+                                    .fa {
+                                        color: @white;
+                                    }
+                                }
 								> a {
+                                    
+                                    
 									padding: 0 @padding+5 0 @padding+40;
 									font-size: @font-size-small+1;
 									position: relative;
@@ -232,6 +241,30 @@
 			overflow: hidden;
 			position: relative;
 			
+            .swiper-container-vertical {
+                position: relative;
+                .swiper-wrapper {
+                    position: absolute;
+                    top:0;
+                    left: -150px;
+                    -webkit-transition:all 0.3s linear;
+                    -moz-transition:all 0.3s linear;
+                    -o-transition:all 0.3s linear;
+                    -ms-transition:all 0.3s linear;
+                    transition:all 0.3s linear;
+//                    .on {
+//                        -webkit-transform: translate3d(0,0,0);
+//                        -moz-transform: translate3d(0,0,0);
+//                        -o-transform: translate3d(0,0,0);
+//                        -ms-transform: translate3d(0,0,0);
+//                        transform: translate3d(0,0,0);
+//                    }
+                    .swiper-slide {
+                        height: 390px;
+                    }
+                }
+            }
+            
 			.swiper-container {
 				position: absolute;
 				top: 6px;
@@ -248,7 +281,7 @@
 				}
 				
 				.swiper-slide {
-					height: 48px;
+					height: 47px;
 					float: none;
 					padding: 4px 10px 6px;
 					border-color: #ccc;
