--- a/css/style.less
+++ b/css/style.less
@@ -27,6 +27,36 @@
 		margin: 0 auto;
 		.row {
 			
+				.col-md-4 {
+					float: right;
+					.header-phone {
+						text-align: right;
+						margin: 0;
+						white-space: nowrap;
+						overflow: hidden;
+						min-height: 32px;
+						line-height: 32px;
+						position: relative;
+						.tk-support-link {
+							text-decoration: none;
+							margin-right: 10px;
+							height: 32px;
+							display: block;
+							float: left;
+							img {
+								width: 20px;
+								position: relative;
+								top: 5px;
+							}
+						}
+						span {
+							font-size: 13px;
+							color: #333;
+							font-weight: bold;
+						}
+					}
+				}
+			
 			 	margin: 0 -15px;
 				.col-lg-3, .col-md-3 {
 					width: 220px;
@@ -335,7 +365,6 @@
 						padding: 0;
 						margin: 0;
 					}
-                    
                     
 					&:hover {
 						background: #fff;
