--- a/css/style.less
+++ b/css/style.less
@@ -1,454 +1,12 @@
-//@import url("./../css/bootstrap.min.css");
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.4.0/css/font-awesome.min.css");
 @import url("./../css/variables.less");
 
-//@media (max-width: @screen-xs-max) { }
-//@media (min-width: @screen-sm-min) and (max-width: @screen-sm-max) { }
-//@media (min-width: @screen-md-min) and (max-width: @screen-md-max) { }
+/* Large devices (large desktops, 1200px and up) */
+//@import url("./../css/screen-lg-min.less");
 
-@media (min-width: @screen-lg-min) {
-    body {
-        font-family: @font-family-arial;
-		padding: 0;
-		margin: 0;
-	}
-	
-	.border(@width: 1px, @style: solid, @color:@color-templete) {
-		border: @width @style @color;
-	}
-	#header {
-		height: 34px;
-		box-shadow: 0 1px 2px rgba(0,0,0,.2);
-		background: @white;
-	}
-	.container {
-		width: 1170px;
-		padding: 0 @padding+10;
-		margin: 0 auto;
-		.row {
-			
-				.col-md-4 {
-					float: right;
-					.header-phone {
-						text-align: right;
-						margin: 0;
-						white-space: nowrap;
-						overflow: hidden;
-						min-height: 32px;
-						line-height: 32px;
-						position: relative;
-						.tk-support-link {
-							text-decoration: none;
-							margin-right: 10px;
-							height: 32px;
-							display: block;
-							float: left;
-							img {
-								width: 20px;
-								position: relative;
-								top: 5px;
-							}
-						}
-						span {
-							font-size: 13px;
-							color: #333;
-							font-weight: bold;
-						}
-					}
-				}
-			
-			 	margin: 0 -15px;
-				.col-lg-3, .col-md-3 {
-					width: 220px;
-					float: left;
-					#header-navigation {
-						z-index: 9;
-						display: block;
-						position: relative;
-						.header-menu {
-							display: block;
-							height: 34px;
-							width: 220px;
-							.all-menu {
-								.border;
-								border-bottom: none;
-								width: 220px;
-								text-decoration: none;
-								color: @blue;
-								display: block;
-								padding: @padding+2 @padding+10 0;
-								.fa {
-									font-size: @font-size-large+3;
-									float: left;
-								}
-								h2 {
-									font-size: @font-size-base+1;
-									display: block;
-									margin: 0 @margin 0 @margin+20;
-									font-weight: bold;
-									color: lighten(@black, 30%);
-									padding: @padding 0;
-									position: relative;
-									top: -2px;
-								}
-							}
-						}   
-						
-						.list-group {
-							margin: 0;
-							padding: 0;
-							border: 1px solid #dfdfdf;
-							border-right: none;
-							border-top: none;
-							> .list-group-item {
-								list-style: none;
-                                > .active {
-                                    background: #00aaf1;
-                                    color: @white;
-                                    .fa {
-                                        color: @white;
-                                    }
-                                }
-								> a {
-                                    
-                                    
-									padding: 0 @padding+5 0 @padding+40;
-									font-size: @font-size-small+1;
-									position: relative;
-									line-height: 38px;
-									height: 38px;
-									border-top: 1px solid #eee;
-    								border-right: 1px solid #eee;
-									display: block;
-									text-decoration: none;
-									color: lighten(@black,40%);
-									.icon-book {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -3px;
-									}
-									.icon-beauty {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -40px;
-									}
-									.icon-house {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -80px;
-									}
-									.icon-electric {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -117px;
-									}
-									.icon-accessories {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -152px;
-									}
-									.icon-camera {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -192px;
-									}
-									.icon-mobile {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -230px;
-									}
-									.icon-toy {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -268px;
-									}
-									.icon-baby {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -305px;
-									}
-									.icon-stationary {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -344px;
-									}
-									.icon-sport {
-										background-image: url("../img/icons.jpg");
-										background-position: -3px -382px;
-									}
-									.icon {
-										width: 25px;
-										height: 25px;
-										position: absolute;
-										color: @blue;
-										line-height: 22px;
-										font-size: @font-size-large+4;
-										left: 12px;
-										top: 8px;
-									}
-									.fa-angle-right {
-										position: absolute;
-										right: 10px;
-										font-size: 16px;
-										color: #ccc;
-										bottom: 0;
-										top: 0;
-										margin: auto;
-										height: 16px;
-									}
-									
-									
-								}
-								> .nav-sub {
-									.nav-sub-list-box {
-										img {
-											margin-top: -13px;
-										}
-									}
-									width: 935px;
-									padding: 16px 20px;
-									height: 419px;
-									border-width: 1px 1px 1px 0;
-									border-style: solid;
-									border-color: #ddd #ddd #ddd #fff;
-									position: absolute;
-									top: 34px;
-									left: 100%;
-									background: #fff;
-									margin-left: 0;
-									box-shadow: 1px 0 1px 0 rgba(0,0,0,.1),1px 1px 1px 0 rgba(0,0,0,.09);
-									display: none;
-									> ul {
-										list-style: none;
-										margin: 0;
-										padding: 0;
-										li {
-											padding-right: 20px;
-											float: left;
-											width: 25%;
-											display: block;
-											padding-right: 5px;
-											overflow: hidden;
-											
-											.nav-sub-list-box {
-												margin-bottom: 10px;
-												
-												h2 {
-													font-size: 13px;
-													font-weight: 700;
-													margin: 0;
-													line-height: 23px;
-													text-transform: capitalize;
-													letter-spacing: -.22px;
-												}
-												a {
-													display: block;
-													color: #444;
-													line-height: 22px;
-													font-size: 13px;
-													margin-right: 30px;
-													text-decoration: none;
-												}
-												.all {
-													font-weight: 700;
-													color: #00aaf1;
-													font-size: 13px;
-													padding: 0;
-													.fa {
-														margin-left: 7px;
-													}
-												}
+/* Medium devices (desktops, 992px and up) */
+//@import url("./../css/screen-md-max.less");
+//@import url("./../css/screen-md-min.less");
 
-											}
-										}
-									}
-								}
-							}
-						}
-				}
-			}
-		}
-	}
-    
-	.home-slideshow-root {
-		width: 1170px;
-		padding: 0 15px;
-		.home-slideshow {
-			width: 905px;
-			height: 390px;
-			margin-top: 28px;
-			float: right;
-			overflow: hidden;
-			position: relative;
-			
-            .swiper-container-vertical {
-                position: relative;
-                .swiper-wrapper {
-                    position: absolute;
-                    top:0;
-                    left: -150px;
-                    -webkit-transition:all 0.3s linear;
-                    -moz-transition:all 0.3s linear;
-                    -o-transition:all 0.3s linear;
-                    -ms-transition:all 0.3s linear;
-                    transition:all 0.3s linear;
-//                    .on {
-//                        -webkit-transform: translate3d(0,0,0);
-//                        -moz-transform: translate3d(0,0,0);
-//                        -o-transform: translate3d(0,0,0);
-//                        -ms-transform: translate3d(0,0,0);
-//                        transform: translate3d(0,0,0);
-//                    }
-                    .swiper-slide {
-                        height: 390px;
-                    }
-                }
-            }
-            
-			.swiper-container {
-				position: absolute;
-				top: 6px;
-				right: 6px;
-				width: 250px;
-				overflow: visible;
-				
-				.swiper-slide:first-child {
-					-webkit-border-radius: 3px 3px 0 0;
-					-moz-border-radius: 3px 3px 0 0;
-					border-radius: 3px 3px 0 0;
-					border-top: 1px solid #ccc;
-					
-				}
-				
-				.swiper-slide {
-					height: 47px;
-					float: none;
-					padding: 4px 10px 6px;
-					border-color: #ccc;
-					border-style: solid;
-					border-width: 0 1px 1px;
-					cursor: pointer;
-					text-shadow: 1px 1px 1px rgba(255,255,255,.5);
-					position: relative;
-					background-image: -webkit-linear-gradient(top,#f4f4f4 0,#eee 100%);
-					background-image: linear-gradient(to bottom,#f4f4f4 0,#eee 100%);
-					background-repeat: repeat-x;
-					filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#fff4f4f4', endColorstr='#ffeeeeee', GradientType=0);
-					-webkit-box-shadow: inset 0 1px 0 0 #fff;
-					box-shadow: inset 0 1px 0 0 #fff;
-					
-					> .image {
-						float: left;
-						width: 36px;
-						height: 36px;
-						border: 1px solid #fff;
-						margin: 0 8px 0 0;
-					}
-					
-					> a {
-						color: #666;
-						font-weight: 700;
-						display: block;
-						font-size: 11px;
-						width: 184px;
-						text-overflow: ellipsis;
-						white-space: nowrap;
-						overflow: hidden;
-						text-decoration: none;
-					}
-					
-					> span {
-						font-size: 11px;
-						display: block;
-						margin-top: 5px;
-						color: #666;
-						width: 184px;
-						text-overflow: ellipsis;
-						white-space: nowrap;
-						overflow: hidden;
-					}
-					
-					.clearboth {
-						height: 0;
-						display: block;
-						border: none;
-						padding: 0;
-						margin: 0;
-					}
-                    
-					&:hover {
-						background: #fff;
-						&:before {
-							right: 100%;
-							top: 49%;
-							border: solid transparent;
-							content: " ";
-							height: 0;
-							width: 0;
-							position: absolute;
-							border-color: transparent #ccc transparent transparent;
-							border-width: 10px;
-							margin-top: -8px
-						}
-						&:after {
-							right: 100%;
-							top: 49%;
-							border: solid transparent;
-							content: " ";
-							height: 0;
-							width: 0;
-							position: absolute;
-							border-color: transparent #fff transparent transparent;
-							border-width: 9px;
-							margin-top: -7px;
-						}
-					}
-				}
-				.active-nav {
-                        background: #fff;
-						&:before {
-							right: 100%;
-							top: 49%;
-							border: solid transparent;
-							content: " ";
-							height: 0;
-							width: 0;
-							position: absolute;
-							border-color: transparent #ccc transparent transparent;
-							border-width: 10px;
-							margin-top: -8px
-						}
-						&:after {
-							right: 100%;
-							top: 49%;
-							border: solid transparent;
-							content: " ";
-							height: 0;
-							width: 0;
-							position: absolute;
-							border-color: transparent #fff transparent transparent;
-							border-width: 9px;
-							margin-top: -7px;
-						}
-                    }
-			}
-			
-//			.swiper-container {
-//				margin: 0 auto;
-//				position: relative;
-//				overflow: hidden;
-//				z-index: 1;
-//			}
-			
-			.swiper-wrapper {
-				position: relative;
-				width: 100%!important;
-				display: block;
-				-webkit-transform: none!important;
-				-ms-transform: none!important;
-				-o-transform: none!important;
-				transform: none!important;
-			}
-		}
-	}
-   .clearfix {
-	   clear: both;
-   }
-	
-	*, :after, :before {
-		-ms-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		-webkit-box-sizing: border-box;
-		box-sizing: border-box;
-	}
-}
+/* Small devices (tablets, 768px and up) */
+@import url("./../css/screen-xs-max.less");
