--- a/css/screen-xs-max.less
+++ b/css/screen-xs-max.less
@@ -32,13 +32,6 @@
 			}
 		}
 		
-		.list-group {
-		  left: -285px;  /* start off behind the scenes */
-		  height: 100%;
-		  position: fixed;
-		  width: 285px;
-		}
-		
 		.list-group ul {
 		  border-top: 1px solid #636366;
 		  list-style: none;
@@ -57,7 +50,7 @@
 
 		.list-group a {
 		  color: #fff;
-		  font-size: 15px;
+		  font-size: 13px;
 		  text-decoration: none;
 		  text-transform: uppercase;
 		}
@@ -67,10 +60,9 @@
 		.list-group {
 			margin: 0;
 			padding: 0;
-			background: #202024 url('http://s3.amazonaws.com/codecademy-content/courses/ltp2/img/uber/black-thread.png') repeat left top;
 			left: -285px;  /* start off behind the scenes */
 			height: 100%;
-			position: fixed;
+			position: relative;
 			width: 285px;
 			.list-group-item {
 				list-style: none;
