--- a/css/style.less
+++ b/css/style.less
@@ -2,11 +2,11 @@
 @import url("./../css/variables.less");
 
 /* Large devices (large desktops, 1200px and up) */
-//@import url("./../css/screen-lg-min.less");
+@import url("./../css/screen-lg-min.less");
 
 /* Medium devices (desktops, 992px and up) */
-//@import url("./../css/screen-md-max.less");
-//@import url("./../css/screen-md-min.less");
+@import url("./../css/screen-md-max.less");
+@import url("./../css/screen-md-min.less");
 
 /* Small devices (tablets, 768px and up) */
 @import url("./../css/screen-xs-max.less");
